--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"build": "next build",
 		"prestart": "kill-port 3000",
 		"start": "next start",
+		"docs": "rimraf docs && docsify init ./docs",
 		"prepare": "husky || true"
 	},
 	"dependencies": {
@@ -42,6 +43,7 @@
 		"@types/openapi-to-postmanv2": "5.0.0",
 		"@types/react": "19.1.8",
 		"@types/react-dom": "19.1.6",
+		"docsify-cli": "4.4.4",
 		"eslint": "9.30.1",
 		"eslint-config-next": "15.3.5",
 		"husky": "9.1.7",
